--- a/ecom/ui/static/app.css
+++ b/ecom/ui/static/app.css
@@ -158,3 +158,14 @@ h3 {
 .feature-icon {
 		font-size: 80px;
 }
+
+	.divider {
+	border: 0;
+  margin-top: 7px;
+  margin-bottom: 7x;
+  margin-left: auto;
+  margin-right: auto;
+  width: 110px;
+  height: 7px;
+  background: url(http://aresivel.wiloke.com/wp-content/themes/aresivel/images/title-divider.png) no-repeat 50% 50%;
+	}
