--- a/ecom/ui/src/components/Footer.css
+++ b/ecom/ui/src/components/Footer.css
@@ -6,7 +6,7 @@
 	text-transform: uppercase;
 	margin-right: 20px;
 	}
-	.logo {
+	footer .logo {
 			position: absolute;
 	width: 100px;
 	opacity: 0.3;
