fix category menu

--- a/ecom/ui/src/components/Category.jade
+++ b/ecom/ui/src/components/Category.jade
@@ -3,4 +3,41 @@ div
     PageHeader.container
   div.container
     .row
+      .col-sm-12
+        h3 Kem nen
+    .row
+      .col-sm-4.mtmed
+        .product
+          .product-img(style='background-image: url(\'https:\/\/preview.arraythemes.com/checkout-edd/wp-content/uploads/sites/23/edd/2015/02/ipad-600x450.jpg\')')
+          
+          h4 Dau goi kho batiste
+          
+          FunButton
+            code
+              i.icon-bag
+              
+              | 30000
+      .col-sm-4.mtmed
+        .product
+          .product-img(style='background-image: url(\'https:\/\/preview.arraythemes.com/checkout-edd/wp-content/uploads/sites/23/edd/2015/02/ipad-600x450.jpg\')')
+          
+          h4 Dau goi kho batiste
+          
+          FunButton
+            code
+              i.icon-bag
+              
+              | 30000
+      .col-sm-4.mtmed
+        .product
+          .product-img(style='background-image: url(\'https:\/\/preview.arraythemes.com/checkout-edd/wp-content/uploads/sites/23/edd/2015/02/ipad-600x450.jpg\')')
+          
+          h4 Dau goi kho batiste
+          
+          FunButton
+            code
+              i.icon-bag
+              
+              | 30000
+
   PageFooter.container
