--- a/ecom/ui/src/components/Category.jade
+++ b/ecom/ui/src/components/Category.jade
@@ -1,87 +1,80 @@
-div
-  div
-    PageHeader.container
-  div.container
-    .row
-      .col-sm-12
-        h3.category-header Kem nen
-        
-        img(src="http://vignette4.wikia.nocookie.net/animal-jam-clans-1/images/9/9f/Cherry_blossom_divider_by_ksanya-d8lh8yw.png/revision/latest?cb=20160717234734", style="width: 109px; position: absolute; top: 26px;left: 367px;z-index: -1;")
-    .row
-      .col-sm-4.mtmed
-        .product
-          .product-img(style='background-image: url("http://aresivel.wiloke.com/wp-content/uploads/2015/07/5.jpg")')
-          
-          h4 Dau goi kho batiste
-          
-          FunButton
-            code
-              i.icon-bag
-              
-              | 30000
-      .col-sm-4.mtmed
-        .product
-          .product-img(style='background-image: url("http://aresivel.wiloke.com/wp-content/uploads/2015/07/23.jpg")')
-          
-          h4 Dau goi kho batiste
-          
-          FunButton
-            code
-              i.icon-bag
-              
-              | 30000
-      .col-sm-4.mtmed
-        .product
-          .product-img(style='background-image: url("http://nordthemes.com/wildbook/wp-content/uploads/sites/2/2016/01/photo-1453167710320-151adc31f6d5.jpg")')
-          
-          h4 Dau goi kho batiste
-          
-          FunButton
-            code
-              i.icon-bag
-              
-              | 30000
+.row
+  .col-sm-12
+    h3.category-header Kem nen
 
-              
-    .row
-      .col-sm-12
-        h3.category-header Kem nen
-        
-        img(src="http://vignette4.wikia.nocookie.net/animal-jam-clans-1/images/f/f4/Sakura.png/revision/latest?cb=20160930195358", style="width: 109px; position: absolute; top: 26px;lef")
-    .row
-      .col-sm-4.mtmed
-        .product
-          .product-img(style='background-image: url("http://aresivel.wiloke.com/wp-content/uploads/2015/07/5.jpg")')
-          
-          h4 Dau goi kho batiste
-          
-          FunButton
-            code
-              i.icon-bag
-              
-              | 30000
-      .col-sm-4.mtmed
-        .product
-          .product-img(style='background-image: url("http://aresivel.wiloke.com/wp-content/uploads/2015/07/23.jpg")')
-          
-          h4 Dau goi kho batiste
-          
-          FunButton
-            code
-              i.icon-bag
-              
-              | 30000
-      .col-sm-4.mtmed
-        .product
-          .product-img(style='background-image: url("http://nordthemes.com/wildbook/wp-content/uploads/sites/2/2016/01/photo-1453167710320-151adc31f6d5.jpg")')
-          
-          h4 Dau goi kho batiste
-          
-          FunButton
-            code
-              i.icon-bag
-              
-              | 30000
+    img(src="http://vignette4.wikia.nocookie.net/animal-jam-clans-1/images/9/9f/Cherry_blossom_divider_by_ksanya-d8lh8yw.png/revision/latest?cb=20160717234734", style="width: 109px; position: absolute; top: 26px;left: 367px;z-index: -1;")
+.row.mbbig
+  .col-sm-4.mtmed
+    .product
+      .product-img(style='background-image: url("http://aresivel.wiloke.com/wp-content/uploads/2015/07/5.jpg")')
+
+      h4 Dau goi kho batiste
+
+      FunButton
+        code
+          i.icon-bag
+
+          | 30000
+  .col-sm-4.mtmed
+    .product
+      .product-img(style='background-image: url("http://aresivel.wiloke.com/wp-content/uploads/2015/07/23.jpg")')
+
+      h4 Dau goi kho batiste
+
+      FunButton
+        code
+          i.icon-bag
+
+          | 30000
+  .col-sm-4.mtmed
+    .product
+      .product-img(style='background-image: url("http://nordthemes.com/wildbook/wp-content/uploads/sites/2/2016/01/photo-1453167710320-151adc31f6d5.jpg")')
+
+      h4 Dau goi kho batiste
+
+      FunButton
+        code
+          i.icon-bag
+
+          | 30000
 
 
-  PageFooter.container
+.row
+  .col-sm-12
+    h3.category-header Kem nen
+
+    img(src="http://vignette4.wikia.nocookie.net/animal-jam-clans-1/images/f/f4/Sakura.png/revision/latest?cb=20160930195358", style="width: 109px; position: absolute; top: 26px;lef")
+.row
+  .col-sm-4.mtmed
+    .product
+      .product-img(style='background-image: url("http://aresivel.wiloke.com/wp-content/uploads/2015/07/5.jpg")')
+
+      h4 Dau goi kho batiste
+
+      FunButton
+        code
+          i.icon-bag
+
+          | 30000
+  .col-sm-4.mtmed
+    .product
+      .product-img(style='background-image: url("http://aresivel.wiloke.com/wp-content/uploads/2015/07/23.jpg")')
+
+      h4 Dau goi kho batiste
+
+      FunButton
+        code
+          i.icon-bag
+
+          | 30000
+  .col-sm-4.mtmed
+    .product
+      .product-img(style='background-image: url("http://nordthemes.com/wildbook/wp-content/uploads/sites/2/2016/01/photo-1453167710320-151adc31f6d5.jpg")')
+
+      h4 Dau goi kho batiste
+
+      FunButton
+        code
+          i.icon-bag
+
+          | 30000
