fix product layout

--- a/ecom/ui/src/components/Product.jade
+++ b/ecom/ui/src/components/Product.jade
@@ -1,2 +1,12 @@
-div
-  p adskfjh
+.container.product-page
+  .row
+    .col-xs-12
+      h3.big-header Sua rua mat batiste
+      
+  .row
+    .col-xs-8
+      img.intro-img(src="https://c2.staticflickr.com/4/3700/9892728706_690a4185a1_o.jpg")
+    .col-xs-4
+      img.intro-img(src="http://tympanus.net/Development/HoverEffectIdeas/img/9.jpg")
+    .col-xs-4
+      img.intro-img(src="http://tympanus.net/Development/HoverEffectIdeas/img/8.jpg")
