--- a/ecom/ui/static/app.css
+++ b/ecom/ui/static/app.css
@@ -11,7 +11,7 @@ body {
 }
 
 .header {
-	/*	background-image: url("../src/assets/background.png");
+		/*	background-image: url("../src/assets/background.png");
 	background-repeat: repeat-x repeat-y;*/
 }
 
@@ -19,7 +19,7 @@ body {
 }
 
 .logo-img {
-	width: 150px; 
+		width: 150px; 
 }
 
 .carousel-indicators .active {
@@ -27,15 +27,15 @@ body {
     height: 4px;
     margin: 0;
     background-color: rgba(255,255,255,.5)
-     -webkit-transition: background-color 1s; /* Safari */
+													-webkit-transition: background-color 1s; /* Safari */
     transition: background-color 1s;
 }
 
 .carousel-indicators li {
-	background-color: rgba(255,255,255, 0.2);
-	 -webkit-transition: background-color 1s; /* Safari */
+		background-color: rgba(255,255,255, 0.2);
+		-webkit-transition: background-color 1s; /* Safari */
     transition: background-color 1s;
-	padding-left: 30px;
+		padding-left: 30px;
     display: inline-block;
     width: 80px;
     height: 4px;
@@ -48,23 +48,23 @@ body {
 }
 
 .left.carousel-control {
-	display: none;
+		display: none;
 }
 
 .right.carousel-control {
-	display: none;
+		display: none;
 }
 
 .carousel-inner {
-	height: 300px;
+		height: 300px;
 }
 
 .mtbig {
-	margin-top: 60px;
+		margin-top: 60px;
 }
 
 .mbbig {
-	margin-bottom: 60px;
+		margin-bottom: 60px;
 }
 
 .mtmed {
@@ -72,48 +72,48 @@ body {
 }
 
 .mbmed {
-	margin-bottom: 30px;
+		margin-bottom: 30px;
 }
 
 .navigation-menu {
-	padding-left: 0px;
-	text-align: center;
+		padding-left: 0px;
+		text-align: center;
 }
 .navigation-menu li {
-	display: inline-block;
-	list-style: none;
-	text-transform: uppercase;
-	margin-left: 20px;
-	margin-right: 20px;
-	font-weight: 500;
+		display: inline-block;
+		list-style: none;
+		text-transform: uppercase;
+		margin-left: 20px;
+		margin-right: 20px;
+		font-weight: 500;
 }
 
 .navigation-menu a:hover {
-	text-decoration: none;
-	cursor: pointer;
-	color: #444;
+		text-decoration: none;
+		cursor: pointer;
+		color: #444;
 
 }
 
 .navigation-menu a {
-	color: #666;
+		color: #666;
 
-	text-decoration: none;
+		text-decoration: none;
 }
 
 @media screen and (min-width: 768px) {
-.carousel-indicators {
-    bottom: 40px;
-}
+		.carousel-indicators {
+				bottom: 40px;
+		}
 }
 
 .three-cols {
-	text-align: center;
+		text-align: center;
 }
 
 .col3 {
-	display: inline-block;
-	width: 32.97777%;
+		display: inline-block;
+		width: 32.97777%;
 
 }
 
@@ -125,17 +125,17 @@ margin-right: 5%;
 */
 
 @media (min-width: 1200px) {
-.container {
-    width: 970px;
-}
+		.container {
+				width: 970px;
+		}
 }
 
 .mbsm {
-	margin-bottom: 30px;
+		margin-bottom: 30px;
 }
 
 .mtverybig {
-	margin-top: 100px;
+		margin-top: 100px;
 }
 
 h2 {
@@ -151,7 +151,7 @@ h3 {
 }
 
 .logo-text {
-	font-size: 29px;
+		font-size: 29px;
     font-weight: 100;
 }
 
@@ -159,13 +159,21 @@ h3 {
 		font-size: 80px;
 }
 
-	.divider {
-	border: 0;
-  margin-top: 7px;
-  margin-bottom: 7x;
-  margin-left: auto;
-  margin-right: auto;
-  width: 110px;
-  height: 7px;
-  background: url(http://aresivel.wiloke.com/wp-content/themes/aresivel/images/title-divider.png) no-repeat 50% 50%;
-	}
+.divider {
+		border: 0;
+		margin-top: 7px;
+		margin-bottom: 7x;
+		margin-left: auto;
+		margin-right: auto;
+		width: 110px;
+		height: 7px;
+		background: url(http://aresivel.wiloke.com/wp-content/themes/aresivel/images/title-divider.png) no-repeat 50% 50%;
+}
+
+
+.big-header {
+		margin-top: 40px;
+		text-align: center;
+		letter-spacing: 0em;
+		font-size: 40px;
+}
