--- a/ecom/ui/static/app.css
+++ b/ecom/ui/static/app.css
@@ -26,8 +26,8 @@ body {
     width: 80px;
     height: 4px;
     margin: 0;
-    background-color: rgba(255,255,255,.5)
-													-webkit-transition: background-color 1s; /* Safari */
+    background-color: rgba(255,255,255,.5);
+		-webkit-transition: background-color 1s; /* Safari */
     transition: background-color 1s;
 }
 
@@ -96,7 +96,7 @@ body {
 }
 
 .navigation-menu a {
-		color: #666;
+		color: #444;
 
 		text-decoration: none;
 }
