add font and style

--- a/ecom/ui/static/fonts/_flaticon.scss
+++ b/ecom/ui/static/fonts/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 01/01/2017 06:06
+    Creation date: 09/01/2017 17:00
     */
 
     @font-face {
@@ -40,14 +40,30 @@
 .flaticon-bag-1:before { content: "\f101"; }
 .flaticon-bag-2:before { content: "\f102"; }
 .flaticon-business:before { content: "\f103"; }
-.flaticon-search:before { content: "\f104"; }
-.flaticon-shop:before { content: "\f105"; }
-.flaticon-shopping-bag:before { content: "\f106"; }
+.flaticon-facebook-1:before { content: "\f104"; }
+.flaticon-facebook-logo:before { content: "\f105"; }
+.flaticon-google-plus-1:before { content: "\f106"; }
+.flaticon-magnifying-glass:before { content: "\f107"; }
+.flaticon-menu:before { content: "\f108"; }
+.flaticon-menu-1:before { content: "\f109"; }
+.flaticon-menu-options:before { content: "\f10a"; }
+.flaticon-search:before { content: "\f10b"; }
+.flaticon-shop:before { content: "\f10c"; }
+.flaticon-shopping-bag:before { content: "\f10d"; }
+.flaticon-social:before { content: "\f10e"; }
     
     $font-Flaticon-bag: "\f100";
     $font-Flaticon-bag-1: "\f101";
     $font-Flaticon-bag-2: "\f102";
     $font-Flaticon-business: "\f103";
-    $font-Flaticon-search: "\f104";
-    $font-Flaticon-shop: "\f105";
-    $font-Flaticon-shopping-bag: "\f106";
+    $font-Flaticon-facebook-1: "\f104";
+    $font-Flaticon-facebook-logo: "\f105";
+    $font-Flaticon-google-plus-1: "\f106";
+    $font-Flaticon-magnifying-glass: "\f107";
+    $font-Flaticon-menu: "\f108";
+    $font-Flaticon-menu-1: "\f109";
+    $font-Flaticon-menu-options: "\f10a";
+    $font-Flaticon-search: "\f10b";
+    $font-Flaticon-shop: "\f10c";
+    $font-Flaticon-shopping-bag: "\f10d";
+    $font-Flaticon-social: "\f10e";
