remote secure mark

--- a/ecom/ui/src/components/Footer.html
+++ b/ecom/ui/src/components/Footer.html
@@ -21,11 +21,6 @@
 			<p><router-link class="footer-link" to="/term">Dieu khoan</router-link></p>
 		</div>
 
-		<div class="col-sm-4 mtmed">
-			<img class="seal" src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Norton_av_logo.png"/>
-			<img class="seal" src="http://online.gov.vn/Images/dathongbao.png" />
-		</div>
-
 		<div class="col-sm-3 mtmed instagram">
 			<h4>Instagram</h4>
 			<div class="divider"></div>
@@ -50,7 +45,6 @@
 	</div>
 	
 	<div class="row"><div class="col-sm-12 mtmed mbmed">
-			<p class="pull-right">© 2016 sutu.shop</p>
-
+			<p class="text-center">© 2016 sutu.shop / Dieu khoan su dung / quyen rieng tu </p>
 	</div></div>
 </footer>
