--- a/ecom/ui/src/components/Home.css
+++ b/ecom/ui/src/components/Home.css
@@ -213,3 +213,29 @@
 		height: 100%;
 		border: 1px solid rgba(255, 255, 255, 0.4);
 }
+
+.navigation-menu {
+		padding-left: 0px;
+		text-align: center;
+}
+.navigation-menu > li {
+		display: inline-block;
+		list-style: none;
+		text-transform: uppercase;
+		margin-left: 20px;
+		margin-right: 20px;
+		font-weight: 500;
+}
+
+.navigation-menu a:hover {
+		text-decoration: none;
+		cursor: pointer;
+		color: #444;
+
+}
+
+.navigation-menu > li > a {
+		color: #444;
+
+		text-decoration: none;
+}
