--- a/ecom/ui/src/components/Product.jade
+++ b/ecom/ui/src/components/Product.jade
@@ -1,12 +1,23 @@
 .container.product-page
   .row
     .col-xs-12
-      h3.big-header Sua rua mat batiste
       
-  .row
-    .col-xs-8
-      img.intro-img(src="https://c2.staticflickr.com/4/3700/9892728706_690a4185a1_o.jpg")
-    .col-xs-4
-      img.intro-img(src="http://tympanus.net/Development/HoverEffectIdeas/img/9.jpg")
-    .col-xs-4
-      img.intro-img(src="http://tympanus.net/Development/HoverEffectIdeas/img/8.jpg")
+  .row.mtbig
+    .col-xs-6
+      .row
+        .col-xs-12
+          img.intro-img(src="https://c2.staticflickr.com/4/3700/9892728706_690a4185a1_o.jpg")
+      .row.mtsmall
+        .col-xs-4
+          img.intro-img(src="https://c2.staticflickr.com/4/3700/9892728706_690a4185a1_o.jpg")
+        .col-xs-4
+          img.intro-img(src="http://tympanus.net/Development/HoverEffectIdeas/img/9.jpg")
+        .col-xs-4
+          img.intro-img(src="http://tympanus.net/Development/HoverEffectIdeas/img/8.jpg")
+    .col-xs-6
+      h2.product-name Sua rua mat batiste
+
+      funbutton
+        code
+          i.icon-bag
+          | 30 000
