--- a/ecom/ui/src/components/Product.css
+++ b/ecom/ui/src/components/Product.css
@@ -2,3 +2,11 @@
 		object-fit: cover;
 		width: 100%;
 }
+
+.product-page .product-name {
+		margin-top: 0px;
+}
+
+.mtsmall {
+		margin-top: 10px;
+}
